feat: stepper form treine

--- a/src/styles/quasar-custom.sass
+++ b/src/styles/quasar-custom.sass
@@ -15,8 +15,11 @@ input:-webkit-autofill:active
     .q-field__control:before, .q-field__control:after
         z-index: 20
 
+.q-stepper--horizontal .q-stepper__step-inner
+    padding: 0 !important
+
 .q-stepper__dot
     font-size: 32px
     background: transparent
     span
-        color: $secondary
+        color: $primary
