feat: init signin

--- a/src/styles/quasar-custom.sass
+++ b/src/styles/quasar-custom.sass
@@ -8,7 +8,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active
-    -webkit-box-shadow: 0 0 0 30px #F1F0FF inset !important
+    -webkit-box-shadow: 0 0 0 30px white inset !important
 .q-field--standard
     .q-field__control:before
         border-color: $secondary !important
