--- a/src/styles/quasar-variables.sass
+++ b/src/styles/quasar-variables.sass
@@ -9,7 +9,9 @@ $negative: #C10015
 $info: #31CCEC
 $warning: #F2C037
 
+$border-color: rgba(0, 0, 0, 0.12)
 $button-border-radius: 8px
 $generic-border-radius: 8px
-$button-padding: 12px 32px !default
+$button-dense-padding: 8px 16px !default
+$button-padding: 15px 32px !default
 $caption: (size: .7rem, line-height: 1rem, letter-spacing: .03333em, weight: 400) !default
